--- a/app/views/factory/in/produce_plans/_overview/_raw_scene.html.erb
+++ b/app/views/factory/in/produce_plans/_overview/_raw_scene.html.erb
@@ -5,7 +5,7 @@
       <span><%= scene.title %></span>
     </div>
     <p class="is-size-7 has-text-centered">
-      <span>预定截止：</span>
+      <span>预定时间：</span>
       <span>
         <span><%= scene.book_start_at.to_fs(:time) %></span>
         <time><%= scene.book_finish_at.to_fs(:time) %></time>
@@ -19,8 +19,8 @@
     </p>
   </div>
   <div class="weui-media-box__ft pr-4">
-    <%= link_to({ action: 'actions', scene_id: scene.id }, class: 'button is-large is-primary') do %>
-      <span>下单</span>
+    <%= link_to({ controller: 'scenes', action: 'show', id: scene.id }, class: 'button is-large is-info') do %>
+      <span>选择日期</span>
     <% end %>
   </div>
 </div>
