--- a/app/views/factory/in/produce_plans/_overview/_produce_plan.html.erb
+++ b/app/views/factory/in/produce_plans/_overview/_produce_plan.html.erb
@@ -43,6 +43,8 @@
     </div>
   </div>
   <div class="weui-panel__ft">
-    <%= render partial: 'produce_on', collection: (Date.today .. Date.today + 3), as: :date %>
+    <div class="columns m-4 is-flex is-multiline">
+      <%= render partial: 'produce_on', collection: (Date.today .. Date.today + 3), as: :date, locals: { scene: scene } %>
+    </div>
   </div>
 </div>
