--- a/app/views/factory/in/produce_plans/_overview/_raw_scene.html.erb
+++ b/app/views/factory/in/produce_plans/_overview/_raw_scene.html.erb
@@ -19,7 +19,7 @@
     </p>
   </div>
   <div class="weui-media-box__ft pr-4">
-    <%= link_to({ controller: 'scenes', action: 'show', id: scene.id }, class: 'button is-large is-info') do %>
+    <%= button_to({ controller: 'scenes', action: 'show', id: scene.id }, class: 'button is-large is-info') do %>
       <span>选择日期</span>
     <% end %>
   </div>
