--- a/app/views/factory/in/productions/index.html+phone.erb
+++ b/app/views/factory/in/productions/index.html+phone.erb
@@ -1,4 +1,5 @@
-<%= render 'produce_on_bar' if params[:produce_on] && params[:scene_id] %>
+<%= render 'top_bar' %>
+<%= render 'filter_form' %>
 
 <div class="weui-flex is-align-items-flex-start is-flex-grow-1">
   <%= render 'menu' unless @produce_plan %>
