--- a/app/views/factory/productions/_base/_cart.html.erb
+++ b/app/views/factory/productions/_base/_cart.html.erb
@@ -1,4 +1,4 @@
-<% item = @cart.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
+<% item = @cart && @cart.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
 
 <%= form_with theme: nil, scope: :item, url: { controller: 'trade/my/items', action: 'update', id: item.id }, method: :patch, class: 'button_to', data: { turbo_scroll: true, turbo_scroll_container: 'production_body' } do |f| %>
   <%= f.hidden_field :number, value: item.number - 1 %>
@@ -25,7 +25,7 @@
 <%= form_with theme: nil, url: { controller: 'trade/my/items', action: 'create' }, data: { turbo_scroll: true, turbo_scroll_container: 'production_body' }, class: 'button_to' do |f| %>
   <%= f.hidden_field :good_type, value: model.class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
-  <%= f.hidden_field :current_cart_id, value: @cart.id %>
+  <%= f.hidden_field :current_cart_id, value: @cart&.id %>
   <%= f.hidden_field :fetch_oneself, value: params[:fetch_oneself] %>
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
   <%= f.hidden_field :scene_id, value: params[:scene_id] %>
