--- a/app/views/factory/productions/_base/_product_part_taxon.html.erb
+++ b/app/views/factory/productions/_base/_product_part_taxon.html.erb
@@ -1,17 +1,17 @@
 <div class="weui-media-box weui-media-box_text">
   <div class="weui-media-box__title">
-    <span><%= product_part_taxon.part_taxon.name %></span>
+    <span><%= part_taxon.name %></span>
     <span class="weui-panel__extra is-size-7">
-      <span><%= product_part_taxon.select_str %></span>
+      <span><%# product_part_taxon.select_str %></span>
     </span>
   </div>
-  <div class="pt-4" data-controller="custom" data-custom-only-value="<%= product_part_taxon.only_one? %>">
-  <% product_part_taxon.parts.each do |part| %>
-    <label class="button is-small mb-2 <%= @production.part_ids.include?(part.id) ? 'is-success' : 'is-light' %>" for="part_<%= part.id %>"<%= product_part_taxon.disabled?(@production.part_ids, part) ? ' disabled' : '' %>>
+  <div class="pt-4" data-controller="custom" data-custom-only-value="<%# product_part_taxon.only_one? %>">
+  <% parts.each do |part| %>
+    <label class="button is-small mb-2 <%= @production.part_ids.include?(part.id) ? 'is-success' : 'is-light' %>" for="part_<%= part.id %>"<%= @production.disabled?(part) ? ' disabled' : '' %>>
       <span><%= part.name %></span>
       <span class="weui-btn__extra"><%= part.price.to_money.format.html_safe %></span>
-      <%= hidden_field_tag 'production[part_ids][]', part.id, form: 'edit_custom', data: { part_taxon_id: product_part_taxon.part_taxon_id }, id: nil if @production.part_ids.include?(part.id) && product_part_taxon.disabled?(@production.part_ids, part) %>
-      <%= check_box_tag 'production[part_ids][]', part.id, @production.part_ids.include?(part.id), disabled: product_part_taxon.disabled?(@production.part_ids, part), data: { action: 'custom#toggle', part_taxon_id: product_part_taxon.part_taxon_id }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
+      <%= hidden_field_tag 'production[part_ids][]', part.id, form: 'edit_custom', data: { part_taxon_id: part.product_taxon_id }, id: nil if @production.part_ids.include?(part.id) && @production.disabled?(part) %>
+      <%= check_box_tag 'production[part_ids][]', part.id, @production.part_ids.include?(part.id), disabled: @production.disabled?(part), data: { action: 'custom#toggle', part_taxon_id: part.product_taxon_id }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
     </label>
   <% end %>
   </div>
