--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -15,7 +15,9 @@
 </div>
 
 <div class="box mx-3 p-0">
-  <%= render partial: 'product_part_taxon', collection: @production.product.product_part_taxons, as: :product_part_taxon %>
+<% @production.same_parts.includes(:product_taxon).group_by(&:product_taxon).each do |part_taxon, parts| %>
+  <%= render partial: 'product_part_taxon', locals: { part_taxon: part_taxon, parts: parts } %>
+<% end %>
 </div>
 
 <% if @production.product.images.present? %>
