--- a/app/views/factory/productions/_base/_product_part_taxon.html.erb
+++ b/app/views/factory/productions/_base/_product_part_taxon.html.erb
@@ -10,8 +10,8 @@
     <label class="button is-small mb-2 <%= @production.part_ids.include?(part.id) ? 'is-success' : 'is-light' %>" for="part_<%= part.id %>"<%= @production.disabled?(part) ? ' disabled' : '' %>>
       <span><%= part.name %></span>
       <span class="weui-btn__extra"><%= part.price.to_money.format.html_safe %></span>
-      <%= hidden_field_tag 'production[part_ids][]', part.id, form: 'edit_custom', data: { part_taxon_id: part.product_taxon_id }, id: nil if @production.part_ids.include?(part.id) && @production.disabled?(part) %>
-      <%= check_box_tag 'production[part_ids][]', part.id, @production.part_ids.include?(part.id), disabled: @production.disabled?(part), data: { action: 'custom#toggle', part_taxon_id: part.product_taxon_id }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
+      <%= hidden_field_tag 'part_ids[]', part.id, form: 'edit_custom', data: { part_taxon_id: part.product_taxon_id }, id: nil if @production.part_ids.include?(part.id) && @production.disabled?(part) %>
+      <%= check_box_tag 'part_ids[]', part.id, @production.part_ids.include?(part.id), disabled: @production.disabled?(part), data: { action: 'custom#toggle', part_taxon_id: part.product_taxon_id }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
     </label>
   <% end %>
   </div>
