--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -1,11 +1,13 @@
 <%= render 'breadcrumb' %>
 
-<%= form_with model: @production, url: { controller: '/factory/productions', action: 'create' }, method: :post, id: 'edit_custom' do |f| %>
-  <%= f.hidden_field :product_id %>
+<%= form_with url: { controller: '/factory/productions', action: 'create' }, method: :post, id: 'edit_custom' do |f| %>
+  <%= f.hidden_field :product_id, value: @production.product_id %>
   <%= f.hidden_field :product_plan_id, value: params[:product_plan_id] %>
 <% end %>
 
-<%= render partial: 'covers', locals: { model: @production.product } if @production.product.covers.length > 0 %>
+<div class="mt-3">
+  <%= render partial: 'covers', locals: { model: @production.product } if @production.product.covers.length > 0 %>
+</div>
 
 <div class="box is-radiusless is-sticky" style="z-index: 3">
   <div class="has-text-bold">
