--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -9,7 +9,7 @@
   <%= render partial: 'covers', locals: { model: @production.product } if @production.product.covers.length > 0 %>
 </div>
 
-<div class="box is-radiusless is-sticky" style="z-index: 3">
+<div class="box mx-3 mt-3" style="z-index: 3">
   <div class="has-text-bold">
     <span><%= @production.product.name %></span>
     <span class="has-text-danger"><%= @production.price.to_money.format.html_safe %></span>
