--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -3,9 +3,9 @@
     <%= render partial: 'cart', locals: { model: @production, cart: @cart } if @cart %>
   </div>
   <div class="column is-half">
-    <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, class: 'button is-danger') do %>
+    <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'button is-danger') do %>
       <i class="fa-solid fa-cart-shopping"></i>
-      <span><%= t('trade.my.carts.show.title') %></span>
+      <span class="pl-1"><%= t('trade.my.carts.show.title') %></span>
     <% end %>
   </div>
 </div>
