--- a/app/views/factory/productions/_show/_share.html.erb
+++ b/app/views/factory/productions/_show/_share.html.erb
@@ -8,7 +8,7 @@
         data-wx-share-title-value="<%= @production.name %>"
         data-wx-share-desc-value="<%= @production.product.description %>>"
         data-wx-share-link-value="<%= url_for(controller: '/factory/productions', action: 'show', id: @production.id, only_path: false) %>"
-        data-wx-share-image-value="<%= image_url('logo.png') %>"
+        data-wx-share-image-value="<%= @production.logo.url %>"
         data-action="click->mask#show click->wx-share#ready"
       >
         <div class="weui-cell__bd weui-cell_primary">分享好友/发个朋友圈</div>
