--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -1,4 +1,4 @@
-<%= render 'top_bar' %>
+<%= render 'top_bar' if params[:scene_id].present? || params[:produce_on].present? %>
 
 <%= render 'station' if params[:station_id].present? || params[:desk_id].present? %>
 
