--- a/app/views/factory/productions/_index/_loading.html.erb
+++ b/app/views/factory/productions/_index/_loading.html.erb
@@ -1,3 +1,6 @@
 <div data-page-target="loading" class="weui-media-box weui-media-box_appmsg is-justify-content-center" style="display: none" id="container">
   <i class="weui-loading"></i>
 </div>
+<%= link_to({ page: @productions.next_page, **params.permit(:product_taxon_id) }, data: { controller: 'common', action: 'common#link', page_target: 'tip' }, class: 'weui-media-box weui-media-box_appmsg is-justify-content-center', id: 'tip') do %>
+  <p class="has-text-centered has-text-grey">向上滑动或点击加载更多</p>
+<% end %>
