--- a/app/views/factory/productions/_index/_menu.html.erb
+++ b/app/views/factory/productions/_index/_menu.html.erb
@@ -4,7 +4,7 @@
     <% if product_taxon.logo.attached? %>
       <div class="weui-grid__icon"><%= image_tag product_taxon.logo %></div>
     <% end %>
-    <p class="weui-grid__label <%= active_helper(product_taxon_id: product_taxon.id, active: 'has-text-success') %>"><%= product_taxon.name %></p>
+    <p class="<%= active_helper(product_taxon_id: product_taxon.id, item: 'weui-grid__label', active: 'weui-grid__label has-text-success') %>" style="width: 4em"><%= product_taxon.name %></p>
   <% end %>
 <% end %>
 </div>
