--- a/app/views/factory/productions/_show/_share.html.erb
+++ b/app/views/factory/productions/_show/_share.html.erb
@@ -1,4 +1,4 @@
-<div class="weui-panel is-radius mt-0 mx-3">
+<div class="weui-panel is-borderless mt-0 mx-3">
   <div class="weui-panel__bd">
     <div class="weui-cells">
       <div
