--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -9,7 +9,7 @@
   <%= render partial: 'covers', locals: { model: @production.product } if @production.product.covers.length > 0 %>
 </div>
 
-<div class="box mx-3 mt-3" style="z-index: 3">
+<div class="box mx-3 mt-3 mb-3" style="z-index: 3">
   <div class="has-text-bold">
     <span><%= @production.product.name %></span>
     <span class="has-text-danger"><%= @production.price.to_money.format.html_safe %></span>
@@ -17,7 +17,7 @@
 </div>
 
 <% if @production.same_parts.present? %>
-  <div class="box mx-3 p-0">
+  <div class="box mx-3 p-0 mb-3">
   <% @production.same_parts.includes(:product_taxon).group_by(&:product_taxon).each do |part_taxon, parts| %>
     <%= render partial: 'product_part_taxon', locals: { part_taxon: part_taxon, parts: parts } %>
   <% end %>
