--- a/app/views/factory/productions/_base/_cart.html.erb
+++ b/app/views/factory/productions/_base/_cart.html.erb
@@ -25,6 +25,7 @@
 <%= form_with theme: nil, url: { controller: 'trade/my/items', action: 'create' }, data: { turbo_scroll: true, turbo_scroll_container: 'production_body' }, class: 'button_to' do |f| %>
   <%= f.hidden_field :good_type, value: model.class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
+  <%= f.hidden_field :number, value: 1 %>
   <%= f.hidden_field :current_cart_id, value: @cart&.id %>
   <%= f.hidden_field :fetch_oneself, value: params[:fetch_oneself] %>
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
