--- a/app/views/factory/in/product_taxons/_base/_production.html.erb
+++ b/app/views/factory/in/product_taxons/_base/_production.html.erb
@@ -1,9 +1,8 @@
 <tr id="tr_<%= model.product_id %>_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <td>
     <div class="is-several pl-2">
-      <i class="fa-solid fa-fw"></i>
-      <%= image_tag model.product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.product.logo.attached? %>
-      <span><%= model.name %></span>
+      <strong><%= model.name %></strong>
+      <span class="has-text-danger pl-1"><%= model.price.to_money.format.html_safe %></span>
     </div>
   </td>
   <td>
