--- a/app/views/factory/admin/productions/_card_form.html.erb
+++ b/app/views/factory/admin/productions/_card_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @production, url: { action: 'update_card' } do |f| %>
+<%= form_with model: @production, scope: :production, url: { action: 'update_card' } do |f| %>
   <%= render 'error_messages', target: f.object %>
   <% @card_templates.each do |card_template| %>
     <%= f.fields :card_price, all: { normal: nil }, wrap: { input: 'field' } do |ef| %>
