--- a/app/views/factory/admin/productions/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_thead.html.erb
@@ -3,11 +3,10 @@
   <p class="has-text-grey"><%= Factory::Production.human_attribute_name(:qr_code) %></p>
 </th>
 <th class="has-text-right">
-  <p><%= Factory::Production.human_attribute_name(:base_price) %></p>
   <p><%= Factory::Production.human_attribute_name(:cost_price) %></p>
   <p><%= Factory::Production.human_attribute_name(:profit_price) %></p>
+  <p><%= Factory::Production.human_attribute_name(:price) %></p>
 </th>
-<th><%= Factory::Production.human_attribute_name(:price) %></th>
 <th><%= Factory::Production.human_attribute_name(:card_price) %></th>
 <th><%= Factory::Production.human_attribute_name(:default) %></th>
 <th>
