--- a/app/views/factory/admin/productions/card.html.erb
+++ b/app/views/factory/admin/productions/card.html.erb
@@ -1,3 +1,21 @@
-<%= turbo_frame_tagged 'modal' do %>
-  <%= render partial: 'card_form' %>
+<%= turbo_frame_tagged 'modal', data: { title: t('.title') } do %>
+  <%= form_with model: @production, scope: :production, url: { action: 'update_card' } do |f| %>
+    <%= render 'error_messages', target: f.object %>
+    <% @card_templates.each do |card_template| %>
+      <%= f.fields :card_price, all: { normal: nil }, wrap: { input: 'field' } do |ef| %>
+        <div class="field is-horizontal" data-controller="enter">
+          <label class="field-label is-normal"><%= card_template.name %></label>
+          <div class="field-body">
+            <%= ef.hidden_field :code, value: card_template.code, index: card_template.id, disabled: !@production.card_price.key?(card_template.code) %>
+            <%= ef.number_field :price, step: 0.01, value: @production.card_price.fetch(card_template.code, @production.price), index: card_template.id, disabled: !@production.card_price.key?(card_template.code) %>
+            <div class="field is-narrow has-addons is-flex">
+              <i class="fa-solid fa-plus" style="cursor: pointer" data-action="click->enter#open"></i>
+              <i class="fa-solid fa-minus pl-1" style="cursor: pointer" data-action="click->enter#close"></i>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+    <%= f.submit %>
+  <% end %>
 <% end %>
