--- a/app/views/factory/admin/productions/cost.html.erb
+++ b/app/views/factory/admin/productions/cost.html.erb
@@ -1,7 +1,7 @@
 <%= turbo_frame_tagged 'modal', data: { title: t('.title') } do %>
   <%= form_with model: @production, scope: :production, url: { action: 'update' } do |f| %>
     <%= render 'error_messages', target: f.object %>
-    <%= f.number_field :profit_price, step: 0.01 %>
+    <%= f.number_field :cost_price, step: 0.01 %>
     <%= f.submit %>
-  <% end %>>
+  <% end %>
 <% end %>
