--- a/app/views/factory/admin/productions/price.html.erb
+++ b/app/views/factory/admin/productions/price.html.erb
@@ -3,5 +3,5 @@
     <%= render 'error_messages', target: f.object %>
     <%= f.number_field :profit_price, step: 0.01 %>
     <%= f.submit %>
-  <% end %>>
+  <% end %>
 <% end %>
