--- a/app/views/factory/our/carts/_list/_add_cart.html.erb
+++ b/app/views/factory/our/carts/_list/_add_cart.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: nil, url: { controller: 'trade/in/items', action: 'create' }, state: 'redirect', class: 'button_to' do |f| %>
+<%= form_with theme: nil, url: { controller: 'trade/our/items', action: 'create' }, state: 'redirect', class: 'button_to' do |f| %>
   <%= f.hidden_field :good_type, value: model.class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
