--- a/app/views/factory/our/carts/_list/_index_tbody.html+phone.erb
+++ b/app/views/factory/our/carts/_list/_index_tbody.html+phone.erb
@@ -13,8 +13,8 @@
   </div>
   <div class="level-right mt-0">
   <% unless model.cart_items.find(&->(i){ i.good_type == @production.class_name && i.good_id == @production.id && i.produce_on.to_s == params[:produce_on].to_s && i.scene_id.to_s == params[:scene_id].to_s }) %>
-    <%= render partial: 'add_cart', locals: { model: @production, member: model } if @production %>
-  <% end %>
+    <%= render partial: 'add_cart', locals: { model: @production, member: model } %>
+  <% end if @production %>
   </div>
 </div>
 <%= render partial: 'trade_item', collection: @items.select(&->(i){ i.member_id == model.id }), as: :item %>
