--- a/app/views/factory/our/carts/_list/_add_cart.html.erb
+++ b/app/views/factory/our/carts/_list/_add_cart.html.erb
@@ -1,4 +1,5 @@
 <span class="has-text-grey pr-2"><%= model.name %></span>
+<span class="has-text-danger pr-2"><%= model.price.to_money.format.html_safe %></span>
 
 <%= form_with theme: nil, url: { controller: 'trade/our/items', action: 'create' }, state: 'redirect', class: 'button_to' do |f| %>
   <%= f.hidden_field :good_type, value: model.class_name %>
