--- a/app/views/factory/in/produce_plans/_overview/_produce_on.html.erb
+++ b/app/views/factory/in/produce_plans/_overview/_produce_on.html.erb
@@ -1,5 +1,5 @@
 <div class="column is-one-third">
-  <%= button_to({ action: 'actions', scene_id: scene.id, produce_on: date }, form: { class: 'button_column' }, disabled: !scene.bookable?(date), class: 'button is-outlined is-success is-block') do %>
+  <%= button_to({ action: 'actions', scene_id: scene.id, produce_on: date }, state: 'enter', form: { class: 'button_column' }, disabled: !scene.bookable?(date), class: 'button is-outlined is-success is-block') do %>
     <div class="header has-text-weight-semibold" style="font-size: 18px">
       <span><%= extra_distance_date(date) %></span>
       <span><%= date.to_fs(:week) %></span>
